# QtSpy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md
QSpyPlugins/: CMakeLists.txt  DrawInfoWidget.cpp  DrawInfoWidget.h  IQSpyInterface.h  ObjTreeWidget.cpp  ObjTreeWidget.h  QSpy.cpp  QSpy.h  SearchWidget.cpp  SearchWidget.h  SwitchToolWidget.cpp  SwitchToolWidget.h  TreeObjMenu.cpp  TreeObjMenu.h  TreeObjMenu.ui  res.qrc
test/: CMakeLists.txt  GraphicsViewTest.h  WidgetTest.h  main.cpp
